# Jacquard

./: .gitignore  .gitmodules  .pdm-python  CLAUDE.md  README.md  adding-a-pdk.html  build.rs  handoff-discipline.html  index.html  print.html  pyproject.toml  searchindex.js  searchindex.json  simulation-architecture.html  timing-simulation.html  toc.html  toc.js
.github/: actionlint.yaml
.github/workflows/: ci.yml
adr/: 0001-opensta-as-oracle.html  0002-timing-ir.html  0003-opentimer-primary-sta.html  0004-private-pdk-testing.html  0005-opensta-vendoring-and-corpus.html  0006-sdf-preprocessing-model.html  0007-timing-model-fidelity-roadmap.html  0008-structured-timing-output.html  index.html
api/: src-files.js
api/jacquard/: all.html  index.html  sidebar-items.js
api/search.index/: 002e3b01cfa8.js  0039b2308171.js  (+672 more)
benchmarks/: README.md
csrc/: kernel_v1.cu  kernel_v1.hip.cpp  kernel_v1_impl.cuh
docs/: adding-a-pdk.md  cosim-timing-support.md  release-process.md  selective-x-propagation.md  simulation-architecture.md  timing-simulation.md  timing-validation.md  timing-violations.md  troubleshooting-vcd.md  usage.md
plans/: gf180mcu-enablement.html  index.html  multi-clock-and-stimulus-architecture.html  phase-0-ir-and-oracle.html  post-phase-0-roadmap.html  ws2-opensta-to-ir.html  ws3-cosim-sdf-followup.html  ws3-delete-sdf-parser.html
scripts/: compare_timing.py  gen_sim_config.py  local_synth.py
spikes/: opentimer-sky130.html
src/: aig.rs  flatten.rs  gf180mcu.rs  gf180mcu_pdk.rs  lib.rs  pdk_decomp.rs  sdf_parser.rs  sky130.rs  sky130_pdk.rs  testbench.rs
(+176 files in other folders)
