[project]
name = "gem-workspace"
version = "0.0.0"
description = "GEM workspace - includes chipflow-examples for design builds"
requires-python = ">=3.12,<3.14"
dependencies = []

[dependency-groups]
# Tools for fetching foundry PDKs locally. Install with `uv sync --group dev`.
# `volare` manages the SkyWater sky130 PDK; the pinned version hash lives
# under [tool.jacquard.pdks.sky130] below.
dev = [
    "volare>=0.20",
]

[tool.uv.workspace]
members = ["vendor/chipflow-examples", "designs/mcu_soc_sky130"]

[tool.uv.sources]
chipflow-lib = { git = "https://github.com/ChipFlow/chipflow-lib.git" }
chipflow-digital-ip = { git = "https://github.com/ChipFlow/chipflow-digital-ip" }
amaranth-soc = { git = "https://github.com/amaranth-lang/amaranth-soc" }

# Pinned foundry PDK versions. Tests that need real Liberty (e.g. the
# sky130 multi-corner integration test under crates/opensta-to-ir) read
# from these and skip cleanly when the PDK isn't installed locally.
#
# To install: `uv sync --group dev && uv run volare enable <hash>`.
# To override the install location, set $SKY130_LIBERTY_DIR.
[tool.jacquard.pdks.sky130]
volare_hash = "c6d73a35f524070e85faff4a6a9eef49553ebc2b"
variant = "sky130A"
default_lib_subdir = "libs.ref/sky130_fd_sc_hd/lib"

[tool.jacquard.pdks.gf180mcu]
volare_hash = "559a117b163cef2f920f33f30f6f690aa0b47e4c"
variant = "gf180mcuC"
default_lib_subdir_7t = "libs.ref/gf180mcu_fd_sc_mcu7t5v0/liberty"
default_lib_subdir_9t = "libs.ref/gf180mcu_fd_sc_mcu9t5v0/liberty"
